# -Medical-Skin-Ai

./: .gitignore  Frontend&Backend run cmd.txt  README.md  pyproject.toml
api/: main.py
explainability/: grad_cam.py  run_grad_cam.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
training/: dataset.py  model_test.py  prepare_training.py  split_lession.py  split_pateints.py  test_tensor.py  train_epoch.py  train_epoch_2.0.py  train_epoch_3.0.py  train_step.py
