[project]
name = "medical-skin-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Anas-Shaikh-786", email = "anasshaikh78654@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy (<2)",
    "torch (>=2.1.0,<3.0.0)",
    "torchvision (>=0.16.0,<1.0.0)",
    "pillow (>=9.0.0,<13.0.0)",
    "pandas (>=1.5.0,<3.0.0)",
    "scikit-learn (<1.4)",
    "opencv-python-headless (<4.9)",
    "fastapi (>=0.100.0,<1.0.0)",
    "uvicorn (>=0.20.0,<1.0.0)",
    "multipart (>=1.3.0,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
     "huggingface-hub (>=0.20.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
